[package]
name = "export-findmy"
version = "0.1.0"
edition = "2021"
description = "Export AirTag/FindMy accessory private keys from iCloud, producing plist files compatible with FindMy.py"

[dependencies]
rustpush = { git = "https://github.com/stek29/rustpush.git", branch = "local/export-findmy-changes", default-features = false, features = ["remote-anisette-v3"] }
omnisette = { git = "https://github.com/stek29/rustpush.git", branch = "local/export-findmy-changes" }
icloud_auth = { git = "https://github.com/stek29/rustpush.git", branch = "local/export-findmy-changes", default-features = false, features = ["remote-anisette-v3"] }
keystore = { git = "https://github.com/stek29/rustpush.git", branch = "local/export-findmy-changes" }
cloudkit-proto = { git = "https://github.com/stek29/rustpush.git", branch = "local/export-findmy-changes" }
tokio = { version = "1", features = ["full"] }
plist = "1.7.0"
sha2 = "0.10.8"
async-trait = "0.1.73"
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
libc = "0.2"
pretty_env_logger = "0.5.0"
toml_edit = "0.19.15"
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
